# Mine-4-Me

./: .gitignore  EXAMPLES.md  README.md  SECURITY_SUMMARY.md  config.json  install.sh  mine4me.py  mine4me_gui.py  requirements.txt
cpp/: CMakeLists.txt  README.md  mine4me.cpp
csharp/: Mine4Me.cs  Mine4Me.csproj  README.md
